--- a/matematiques.html
+++ b/matematiques.html
@@ -90,7 +90,7 @@
         <div id="math-menu" class="max-w-6xl mx-auto px-4">
             <div class="text-center mb-10">
                 <h1 class="text-4xl font-bold text-emerald-900 mb-4">Matemàtiques</h1>
-                <p class="text-gray-600">Recursos de càlcul, geometria i resolució de problemes.</p>
+                <p class="text-gray-600">Recursos de càlcul, lògica i mesura.</p>
             </div>
 
             <div class="grid md:grid-cols-3 gap-6">
@@ -109,7 +109,7 @@
                     </button>
                 </div>
 
-                <!-- TARGETA GENERADOR SUDOKUS (NOVA) -->
+                <!-- TARGETA GENERADOR SUDOKUS -->
                 <div class="bg-white border rounded-xl p-6 shadow-sm hover:shadow-md transition border-emerald-200 ring-2 ring-emerald-50 group flex flex-col h-full">
                     <div class="flex justify-between items-start mb-4">
                         <span class="bg-emerald-100 text-emerald-800 text-xs font-bold px-3 py-1 rounded-full">Lògica</span>
@@ -123,10 +123,18 @@
                     </a>
                 </div>
 
-                <!-- Targeta Placeholder -->
-                <div class="bg-gray-50 border border-dashed border-gray-300 rounded-xl p-6 flex flex-col items-center justify-center text-gray-400 h-64">
-                    <i data-lucide="ruler" class="w-12 h-12 mb-2 opacity-50"></i>
-                    <p>Geometria (Aviat)</p>
+                <!-- TARGETA RELLOTGE INTERACTIU (NOVA) -->
+                <div class="bg-white border rounded-xl p-6 shadow-sm hover:shadow-md transition border-emerald-200 ring-2 ring-emerald-50 group flex flex-col h-full">
+                    <div class="flex justify-between items-start mb-4">
+                        <span class="bg-emerald-100 text-emerald-800 text-xs font-bold px-3 py-1 rounded-full">Temps</span>
+                        <i data-lucide="clock" class="text-emerald-600 w-8 h-8 group-hover:scale-110 transition"></i>
+                    </div>
+                    <h4 class="font-bold text-lg mb-2">Rellotge Interactiu</h4>
+                    <p class="text-gray-600 text-sm mb-6 flex-grow">Aprèn a llegir l'hora, practica amb reptes i descobreix com es diu en català.</p>
+                    
+                    <a href="rellotge.html" class="block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-bold hover:bg-emerald-700 transition shadow-md mt-auto">
+                        Obrir Rellotge ⌚
+                    </a>
                 </div>
 
             </div>
