--- a/eines.html
+++ b/eines.html
@@ -57,7 +57,7 @@
 
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="max-w-6xl mx-auto px-4 flex justify-between h-20 items-center">
-            <a href="#" class="flex items-center gap-2 text-slate-600 hover:text-indigo-600 transition">
+            <a href="gestio.html" class="flex items-center gap-2 text-slate-600 hover:text-indigo-600 transition">
                 <i data-lucide="arrow-left" class="w-5 h-5"></i> Tornar
             </a>
             <span class="text-2xl font-bold text-slate-800 brand-font">Caixa d'Eines</span>
