--- a/llengues.html
+++ b/llengues.html
@@ -123,7 +123,7 @@
                         <button onclick="openVerbApp()" class="w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition shadow-md mt-auto">Start Test 🚀</button>
                     </div>
 
-                    <!-- Taboo Card (NOVA) -->
+                    <!-- Taboo Card -->
                     <div class="bg-white border rounded-xl p-6 shadow-sm hover:shadow-md transition border-pink-200 ring-2 ring-pink-50 flex flex-col h-full group">
                         <div class="flex justify-between items-start mb-4">
                             <span class="bg-pink-100 text-pink-800 text-xs font-bold px-3 py-1 rounded-full">Vocabulary</span>
@@ -135,6 +135,20 @@
                             Play Taboo 🤐
                         </a>
                     </div>
+
+                    <!-- NEW: Vocabulary Memory Card -->
+                    <div class="bg-white border rounded-xl p-6 shadow-sm hover:shadow-md transition border-indigo-200 ring-2 ring-indigo-50 flex flex-col h-full group">
+                        <div class="flex justify-between items-start mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-bold px-3 py-1 rounded-full">Vocabulary</span>
+                            <i data-lucide="images" class="text-indigo-600 w-8 h-8 group-hover:scale-110 transition"></i>
+                        </div>
+                        <h4 class="font-bold text-lg mb-2">Vocabulary Memory</h4>
+                        <p class="text-gray-600 text-sm mb-4 flex-grow">Match pictures with words. Topics: Clothes, Weather, Animals & more.</p>
+                        <a href="memory-pictures.html" class="block w-full text-center bg-indigo-500 text-white py-2 rounded-lg font-bold hover:bg-indigo-600 transition shadow-md mt-auto">
+                            Play Memory 🖼️
+                        </a>
+                    </div>
+
                 </div>
             </div>
 
