--- a/index.html
+++ b/index.html
@@ -217,6 +217,19 @@
                 <span class="hover:text-indigo-600 cursor-pointer transition"><i data-lucide="twitter" class="w-4 h-4"></i></span>
             </div>
         </div>
+        <!-- Llicència CC -->
+            <div class="text-xs text-slate-400 flex flex-wrap justify-center items-center gap-2 mt-4 pt-4 border-t border-slate-50 w-full">
+                This work is licensed under 
+                <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" class="hover:text-indigo-600 transition underline">
+                    Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International
+                </a>
+                <div class="flex items-center opacity-70">
+                    <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="CC" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+                    <img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="BY" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+                    <img src="https://mirrors.creativecommons.org/presskit/icons/nc.svg" alt="NC" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+                    <img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="SA" style="max-width: 1em;max-height:1em;margin-left: .2em;">
+                </div>
+            </div>
     </footer>
 
     <script>
