--- a/matematiques.html
+++ b/matematiques.html
@@ -151,6 +151,20 @@
                     </a>
                 </div>
 
+                <!-- TARGETA GEOMETRY LAB (NOVA) -->
+                <div class="bg-white border rounded-xl p-6 shadow-sm hover:shadow-md transition border-emerald-200 ring-2 ring-emerald-50 group flex flex-col h-full">
+                    <div class="flex justify-between items-start mb-4">
+                        <span class="bg-emerald-100 text-emerald-800 text-xs font-bold px-3 py-1 rounded-full">Geometria</span>
+                        <i data-lucide="shapes" class="text-emerald-600 w-8 h-8 group-hover:scale-110 transition"></i>
+                    </div>
+                    <h4 class="font-bold text-lg mb-2">Laboratori de Geometria</h4>
+                    <p class="text-gray-600 text-sm mb-6 flex-grow">Explora polígons 2D, construeix figures 3D i visualitza les seves propietats interactivament.</p>
+                    
+                    <a href="geometrylab.html" class="block w-full text-center bg-emerald-600 text-white py-2 rounded-lg font-bold hover:bg-emerald-700 transition shadow-md mt-auto">
+                        Obrir Laboratori 📐
+                    </a>
+                </div>
+
             </div>
         </div>
 
