--- a/index.html
+++ b/index.html
@@ -52,13 +52,11 @@
     <!-- Barra de Navegació -->
     <nav class="bg-white/80 backdrop-blur-md sticky top-0 z-50 border-b border-slate-200">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between h-20 items-center">
+            <div class="flex justify-between h-24 items-center"> <!-- Augmentada l'alçada del contenidor de 20 a 24 per acomodar el logo més gran -->
                 <a href="index.html" class="flex items-center gap-3 group">
                     <!-- LOGO INTEGRADO -->
-                    <!-- Nota: Aquesta imatge només es veurà quan tinguis la carpeta 'img' al costat de l'index.html -->
-                    <img src="img/logo.png" alt="Logo Jo Recursos" class="h-12 w-auto transition duration-300 transform group-hover:scale-105">
-                    
-                    <span class="text-2xl font-bold bg-clip-text text-transparent bg-gradient-to-r from-indigo-600 to-purple-600 brand-font">Jo Recursos</span>
+                    <img src="img/logo-nofons.png" alt="Logo Jo Recursos" class="h-20 w-auto transition duration-300 transform group-hover:scale-105">
+                    <!-- Títol eliminat -->
                 </a>
                 
                 <!-- Menú Escriptori -->
