--- a/llengues.html
+++ b/llengues.html
@@ -15,7 +15,7 @@
         .hidden-lang { display: none; }
         .hidden-app { display: none !important; }
 
-        /* --- ESTILS DE TARGETES (Importats i adaptats de index.html) --- */
+        /* --- ESTILS DE TARGETES (Coherents amb index.html i altres pàgines) --- */
         .card {
             border-radius: 15px;
             padding: 30px 20px;
@@ -120,12 +120,38 @@
 </head>
 <body class="bg-gray-50 text-gray-800 min-h-screen flex flex-col">
 
+    <!-- Navegació Unificada -->
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 flex justify-between h-20 items-center">
-            <a href="index.html" class="flex items-center gap-2 text-gray-600 hover:text-blue-600 transition">
-                <i data-lucide="arrow-left" class="w-5 h-5"></i> Tornar a l'Inici
+            <!-- Logo / Enllaç Inici -->
+            <a href="index.html" class="logo flex items-center">
+                 <img src="img/logo-nofons.png" alt="Logo" class="h-16 w-auto mr-2">
             </a>
-            <span class="text-2xl font-bold text-blue-900 brand-font">Secció Llengües</span>
+
+            <!-- Menú Principal -->
+            <div class="hidden md:flex items-center gap-2">
+                <a href="matematiques.html" class="px-5 py-2 rounded-full font-bold text-gray-600 hover:bg-gray-100 transition flex items-center gap-2">
+                    <i class="fas fa-calculator"></i> Matemàtiques
+                </a>
+                <!-- Botó Actiu per a Llengües: ARA VERMELL (bg-red-600) -->
+                <a href="llengues.html" class="px-5 py-2 rounded-full font-bold transition bg-red-600 text-white shadow-md flex items-center gap-2">
+                    <i class="fas fa-comments"></i> Llengües
+                </a>
+                <a href="medi.html" class="px-5 py-2 rounded-full font-bold text-gray-600 hover:bg-gray-100 transition flex items-center gap-2">
+                    <i class="fas fa-globe-europe"></i> Medi
+                </a>
+                <a href="jocs.html" class="px-5 py-2 rounded-full font-bold text-gray-600 hover:bg-gray-100 transition flex items-center gap-2">
+                    <i class="fas fa-gamepad"></i> Jocs
+                </a>
+                <a href="gestio.html" class="px-5 py-2 rounded-full font-bold text-gray-600 hover:bg-gray-100 transition flex items-center gap-2">
+                    <i class="fas fa-tools"></i> Eines
+                </a>
+            </div>
+            
+            <!-- Botó menú mòbil -->
+            <div class="md:hidden text-gray-600">
+                <i class="fas fa-bars text-2xl"></i>
+            </div>
         </div>
     </nav>
 
@@ -171,7 +197,7 @@
             </div>
             
             <div class="grid md:grid-cols-3 gap-6">
-                <!-- NOVA Targeta: Ordena la Frase (Castellano) -->
+                <!-- Targeta: Ordena la Frase (Castellano) -->
                 <a href="fraseses.html" class="card grad-esp-3">
                     <div class="card-icon"><i data-lucide="align-left"></i></div>
                     <h3>Ordena la Frase</h3>
@@ -257,6 +283,20 @@
             </div>
         </div>
     </main>
+
+    <footer class="bg-gradient-to-r from-gray-100 to-gray-200 border-t border-gray-300 mt-20 py-10">
+        <div class="max-w-4xl mx-auto text-center px-4">
+            <p class="text-gray-600 mb-4 font-medium">Creat per Jo Francis Gil</p>
+            <div class="flex justify-center items-center gap-2 opacity-80">
+                <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
+                    <img alt="Llicència de Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" />
+                </a>
+            </div>
+            <p class="text-xs text-gray-500 mt-2">
+                Obra sota llicència <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" class="text-gray-700 hover:underline">CC BY-NC-SA 4.0</a>.
+            </p>
+        </div>
+    </footer>
 
     <script>
         lucide.createIcons();
