--- a/index.html
+++ b/index.html
@@ -307,14 +307,14 @@
         <h2 class="title-ai"><i class="fas fa-robot"></i> Eines IA</h2>
         <div class="grid-container">
             <!-- Targeta 1: Informes IA -->
-            <a href="https://gemini.google.com/" target="_blank" class="card grad-purple">
+            <a href="https://gemini.google.com/share/67a77bf01572" target="_blank" class="card grad-purple">
                 <div class="card-icon"><i class="fas fa-file-alt"></i></div>
                 <h3>Informes IA</h3>
                 <p>Generació d'informes i documents educatius.</p>
             </a>
 
             <!-- Targeta 2: Rúbriques IA -->
-            <a href="https://gemini.google.com/app" target="_blank" class="card grad-blue">
+            <a href="https://gemini.google.com/share/58012cfecab2" target="_blank" class="card grad-blue">
                 <div class="card-icon"><i class="fas fa-clipboard-list"></i></div>
                 <h3>Rúbriques IA</h3>
                 <p>Creació automàtica de rúbriques d'avaluació.</p>
