Update links for Informes IA and Rúbriques IA

--- a/gestio.html
+++ b/gestio.html
@@ -142,14 +142,14 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 
                 <!-- Informes IA -->
-                <a href="https://gemini.google.com/" target="_blank" class="card grad-tool-metal">
+                <a href="https://gemini.google.com/share/67a77bf01572" target="_blank" class="card grad-tool-metal">
                     <div class="card-icon"><i class="fas fa-file-alt"></i></div>
                     <h3>Informes IA</h3>
                     <p>Generació d'informes i documents educatius.</p>
                 </a>
 
                 <!-- Rúbriques IA -->
-                <a href="https://gemini.google.com/app" target="_blank" class="card grad-tool-silver">
+                <a href="https://gemini.google.com/share/58012cfecab2" target="_blank" class="card grad-tool-silver">
                     <div class="card-icon"><i class="fas fa-clipboard-list"></i></div>
                     <h3>Rúbriques IA</h3>
                     <p>Creació automàtica de rúbriques d'avaluació.</p>
